welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: not found: value mawValue
	return mawValue(T)
               ^